fix layout on mobile screen

--- a/css/menuPage.css
+++ b/css/menuPage.css
@@ -567,7 +567,9 @@ box-shadow: inset 0 0 0 2px #FF8900;
 .items{
     gap: 5px;
     height: 220px;
-    padding-right: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    
 }
 #itemName{
     font-size: 1rem;
